# rustrial-os

./: .gitignore  Cargo.toml  README.md  build-iso.ps1  build-iso.sh  build.rs  build.sh  clean.sh  limine.conf  linker-limine.ld  run.sh  rust-toolchain.toml  test.sh
.cargo/: config-limine.toml  config.toml
.github/workflows/: ci.yml
boot/: Makefile  boot.asm  build-custom.ps1  build-custom.sh  build.ps1  custombootloader.md  stage2.asm
docs/: DESKTOP.md  architecture.md  custombootloader.md  haxe_script_core.md  interactive_menu.md  limine.md  net.md  scriptdocs.md  shell.md
scripts/: gdb-debug.sh  generate-config.py  make-iso.sh  network-test-server.py  network-test.sh  ntp-test-server.py  quick-debug.sh  scripts.md
src/: allocator.rs  context_menu.rs  desktop.rs  gdt.rs  graphics.rs  interrupts.rs  lib.rs  limine.rs  main.rs  memory.rs  native_ffi.rs  rustrial_menu.rs  script_loader.rs  serial.rs  shell.rs  theme.rs  vga_buffer.rs  window_manager.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/drivers/: mod.rs
src/fs/: mod.rs  ramfs.rs  vfs.rs
src/graphics/: README.md  demo.rs  graphicsdemo.md  splash.rs  text_graphics.rs  vga_graphics.rs
src/memory/: dma.rs
src/menu/: hardware_menu.rs  info_screens.rs  mod.rs  script_menu.rs
src/native/: cpu_asm.asm  native.md  (+2 more)
tests/: arp_test.rs  basic_boot.rs  ethernet_test.rs  fs_test.rs  heap_allocation.rs  icmp_test.rs  ipv4_test.rs  loopback_test.rs  network_test.rs  should_panic.rs  stack_overflow.rs  tcp_test.rs  udp_test.rs
tools/: build.hxml  inspector.html  inspector.hxml  lexer_test.hxml  parser_test.hxml  pipeline.hxml  validate.hxml
(+63 files in other folders)
