[package]
name = "rustrial_os"
version = "0.1.0"
edition = "2024"

[features]
default = ["bootloader"]
custom_bootloader = []
limine = []
bootloader = ["dep:bootloader"]

[package.metadata.bootimage]
run-args = [
    "-serial", "stdio",
    "-display", "gtk",
    "-vga", "std",
    "-no-reboot",
    "-no-shutdown",
    # network config RTL8139 NIC with user networking
    "-netdev", "user,id=net0",
    "-device", "rtl8139,netdev=net0"
]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300 

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"], optional = true}
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
linked_list_allocator = "0.9.0"

[dependencies.embedded-graphics]
version = "0.8"
default-features = false

[dependencies.tinybmp]
version = "0.5"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[bin]]
name = "rustrial_os"
test = true
bench = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false



